--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "babel-loader": "^8.0.6",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8"
+  },
+  "dependencies": {
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0"
   }
 }
